--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,8 @@
     <title>Hakim Savcı Atama Simülatörü</title>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1805020580499630"
         crossorigin="anonymous"></script>
+    <meta name="google-adsense-account" content="ca-pub-1805020580499630">
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
